--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
   </nav>
     </main>
 
-    <script type="module" src="./js/"></script>
+    <script type="module" src="/src/js/"></script>
   </body>
 </html>
